Upload product images to S3
