# server/api/controllers/image/image.controller.js
@@ -1,0 +1,9 @@
+import ImageService from '../../services/image.service';
+
+export class ImageController {
+  upload(req, res) {
+    ImageService.upload(req.body.imageData, req.body.productId).then((r) => res.json(r));
+  }
+
+}
+export default new ImageController();
